infra/k8s/sessions-depl.yaml
# we creat a deployment to ensure that there's
# always n pod that are running our image
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sessions
  template:
    metadata:
      labels:
        app: sessions
    spec:
      containers:
        - name: sessions
          image: karimgehad/mycoach-sessions
---
# we creat a service of Type ClusterId which is
# the default to be able to communicate with the
# pod from inside of our cluster

apiVersion: v1
kind: Service
metadata:
  name: sessions-srv
spec:
  selector:
    app: sessions
  ports:
    - name: sessions
      protocol: TCP
      port: 3000
      targetPort: 3000
