infra/k8s/ingress-depl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: mycoach.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: users-srv
              servicePort: 3000
          - path: /api/coach/?(.*)
            backend:
              serviceName: coaching-srv
              servicePort: 3000
          - path: /api/session/?(.*)
            backend:
              serviceName: sessions-srv
              servicePort: 3000
